# nix-clang-import-std

./: .gitignore  CMakeLists.txt  flake.nix  justfile
src/: foo.cpp  main.cpp
src/foo/: impl.cpp
